--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<mat-toolbar class="footer">
+  <span>
+    Desenvolvido com
+    <i class="material-icons red v-middle">
+      favorite
+    </i>
+    por <strong>Luiz Setten <span class="red">@luizsetten</span></strong>
+  </span>
+</mat-toolbar>
